// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InformationalCard component should render correctly with children 1`] = `
<div
  className="informational-card"
>
  <span
    className="informational-card__before"
    style={
      Object {
        "background": "#F5BE33",
      }
    }
  />
  <div
    className="informational-card__heading"
  >
    <svg
      className=""
      height={16}
      style={
        Object {
          "marginRight": 5,
          "marginTop": 2,
          "minWidth": 16,
        }
      }
      viewBox="0 0 16 16"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 0C3.6 0 0 3.6 0 8s3.6 8 8 8 8-3.6 8-8-3.6-8-8-8zm1 12H7V7h2v5zM8 6c-.6 0-1-.4-1-1s.4-1 1-1 1 .4 1 1-.4 1-1 1z"
        fill="#F5BE33"
        fillRule="nonzero"
      />
    </svg>
    Data.
  </div>
  <div
    className="informational-card__subheading"
  >
    Cookies.
  </div>
  <div
    className="informational-card__action-item"
  >
    <div>
      Test children prop
    </div>
  </div>
</div>
`;

exports[`InformationalCard component should render correctly without children 1`] = `
<div
  className="informational-card"
>
  <span
    className="informational-card__before"
    style={
      Object {
        "background": "#F5BE33",
      }
    }
  />
  <div
    className="informational-card__heading"
  >
    <svg
      className=""
      height={16}
      style={
        Object {
          "marginRight": 5,
          "marginTop": 2,
          "minWidth": 16,
        }
      }
      viewBox="0 0 16 16"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M8 0C3.6 0 0 3.6 0 8s3.6 8 8 8 8-3.6 8-8-3.6-8-8-8zm1 12H7V7h2v5zM8 6c-.6 0-1-.4-1-1s.4-1 1-1 1 .4 1 1-.4 1-1 1z"
        fill="#F5BE33"
        fillRule="nonzero"
      />
    </svg>
    Data.
  </div>
  <div
    className="informational-card__subheading"
  >
    Cookies.
  </div>
</div>
`;
